--- a/unified-runtime/source/loader/loader.def.in
+++ b/unified-runtime/source/loader/loader.def.in
@@ -475,6 +475,7 @@ EXPORTS
 	urPrintUsmAdviceFlags
 	urPrintUsmAllocInfo
 	urPrintUsmAllocLocationDesc
+	urPrintUsmContextMemcpyExpParams
 	urPrintUsmDesc
 	urPrintUsmDeviceAllocParams
 	urPrintUsmDeviceDesc
@@ -550,6 +551,7 @@ EXPORTS
 	urSamplerGetNativeHandle
 	urSamplerRelease
 	urSamplerRetain
+	urUSMContextMemcpyExp
 	urUSMDeviceAlloc
 	urUSMFree
 	urUSMGetMemAllocInfo
