--- a/devops/actions/run-tests/cts/action.yml
+++ b/devops/actions/run-tests/cts/action.yml
@@ -3,8 +3,10 @@ name: 'Run SYCL CTS tests'
 inputs:
   ref:
     description: "Commit SHA or branch to checkout tests"
-    required: false
-    default: "main"
+    required: true
+  cts_exclude_ref:
+    description: "Commit SHA or branch to checkout the cts_exclude_filter dir"
+    required: true
   extra_cmake_args:
     required: false
   cts_testing_mode:
@@ -19,6 +21,18 @@ inputs:
 runs:
   using: "composite"
   steps:
+  - name: Checkout cts_exclude_filter folder
+    uses: actions/checkout@v4
+    with:
+      ref: ${{ inputs.cts_exclude_ref }}
+      path: tmp
+      sparse-checkout: |
+        cts_exclude_filter
+  - name: Move cts_exclude_filter to root
+    shell: bash
+    run: |
+      mv tmp/cts_exclude_filter .
+      rm -rf tmp
   - name: Checkout SYCL CTS tests
     if: inputs.cts_testing_mode != 'run-only'
     uses: ./devops/actions/cached_checkout
@@ -42,11 +56,11 @@ runs:
       # If CTS_TESTS_TO_BUILD is null - use filter
       if [ -z "$CTS_TESTS_TO_BUILD" ]; then
         if [ "${{ contains(inputs.cts_testing_mode, 'build-only')  }}" = "true" ]; then
-          cts_exclude_filter=$PWD/devops/cts_exclude_filter/compfails
+          cts_exclude_filter=$PWD/cts_exclude_filter/compfails
         elif [ "${{ contains(inputs.target_devices, 'opencl:cpu')  }}" = "true" ]; then
-          cts_exclude_filter=$PWD/devops/cts_exclude_filter/OCL_CPU
+          cts_exclude_filter=$PWD/cts_exclude_filter/OCL_CPU
         elif [ "${{ contains(inputs.target_devices, 'level_zero:gpu')  }}" = "true" ]; then
-          cts_exclude_filter=$PWD/devops/cts_exclude_filter/L0_GPU
+          cts_exclude_filter=$PWD/cts_exclude_filter/L0_GPU
         fi
 
         # List excluded SYCL CTS categories:
@@ -105,7 +119,7 @@ runs:
 
   # If the suite was built on another machine then the build contains the full
   # set of tests. We have special files to filter out some test categories,
-  # see "devops/cts_exclude_filter/*". Each configuration has its own file, e.g.
+  # see "cts_exclude_filter/*". Each configuration has its own file, e.g.
   # there is "cts_exclude_filter/OCL_CPU" for opencl:cpu device. Therefore,
   # these files may differ from each other, so when there is a pre-built set of
   # tests, we need to filter it according to the filter-file.
@@ -115,9 +129,9 @@ runs:
     run: |
       cts_exclude_filter=""
       if [ "${{ contains(inputs.target_devices, 'opencl:cpu')  }}" = "true" ]; then
-        cts_exclude_filter=$PWD/devops/cts_exclude_filter/OCL_CPU
+        cts_exclude_filter=$PWD/cts_exclude_filter/OCL_CPU
       elif [ "${{ contains(inputs.target_devices, 'level_zero:gpu')  }}" = "true" ]; then
-        cts_exclude_filter=$PWD/devops/cts_exclude_filter/L0_GPU
+        cts_exclude_filter=$PWD/cts_exclude_filter/L0_GPU
       fi
 
       while IFS= read -r line; do
