--- a/unified-runtime/test/conformance/exp_command_buffer/CMakeLists.txt
+++ b/unified-runtime/test/conformance/exp_command_buffer/CMakeLists.txt
@@ -7,13 +7,14 @@ add_conformance_test_with_kernels_environment(exp_command_buffer
   release.cpp
   retain.cpp
   commands.cpp
-  fill.cpp
   event_sync.cpp
   kernel_event_sync.cpp
   invalid.cpp
   copy.cpp
   read.cpp
   write.cpp
+  rect_read.cpp
+  rect_write.cpp
   update/buffer_fill_kernel_update.cpp
   update/invalid_update.cpp
   update/kernel_handle_update.cpp
