[SYCL][Bindless][UR] Add support for timeline semaphores
Add support for timeline semaphores on linux and windows for CUDA backend and preliminary support in L0 backend.
Update vulkan_interop/sampled_images.cpp to remove redundant wait when using semaphores.

--- a/unified-runtime/scripts/core/exp-bindless-images.yml
+++ b/unified-runtime/scripts/core/exp-bindless-images.yml
@@ -212,6 +212,10 @@ etors:
     desc: "Win32 NT handle"
   - name: WIN32_NT_DX12_FENCE
     desc: "Win32 NT DirectX 12 fence handle"
+  - name: TIMELINE_FD
+    desc: "Timeline file descriptor"
+  - name: TIMELINE_WIN32_NT
+    desc: "Timeline Win32 NT handle"
 --- #--------------------------------------------------------------------------
 type: struct
 desc: "File descriptor"
