[CI] Test SYCL build on UR's PVC runner
PR to test the runner. Once successful, I'll close this PR and will add  Linux and Build label to the runner instead.

--- a/.github/workflows/sycl-linux-build.yml
+++ b/.github/workflows/sycl-linux-build.yml
@@ -105,7 +105,7 @@ permissions: read-all
 jobs:
   build:
     name: Build + LIT
-    runs-on: [Linux, build]
+    runs-on: [UR_L0]
     container:
       image: ${{ inputs.build_image }}
       options: -u 1001:1001
