--- a/.github/workflows/ur-benchmarks-reusable.yml
+++ b/.github/workflows/ur-benchmarks-reusable.yml
@@ -66,7 +66,7 @@ jobs:
             body: body
           })
 
-    # - name: Checkout SYCL
+    #. - name: Checkout SYCL
     #   uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
     #   with:
     #     path: sycl-repo
