[SYCL][HIP] Disable legacy images on HIP
Legacy image support for HIP was initially hidden behind an environment
variable as it's not really supported, bindless images should be used
instead.

But after looking a bit closer at the existing support, it's pretty much
entirely broken, almost none of our existing legacy images tests even
compile for AMD.

So this patch fully disables the legacy images for HIP and cleans up all
the related `UNSUPPORTED`, in a lot of cases `target-amd` had to be kept
since the `build-only` mode doesn't know about the device aspects.

It also cleans up existing `UNSUPPORTED` tags for `cuda` in the same
tests.

--- a/sycl/test-e2e/Sampler/lit.local.cfg
+++ b/sycl/test-e2e/Sampler/lit.local.cfg
@@ -5,4 +5,7 @@
 # merged with intel/llvm to address an issue of mapping from SPIR-V friendly builtins
 # to Image Read/Write instructions
 # After the 1 issue is resolved and 2 is merged we will re-enable Image support.
-config.unsupported_features += ['spirv-backend']
+#
+# Legacy images aren't supported on AMD and also don't compile, so mark them
+# unsupported here, bindless images should be used instead.
+config.unsupported_features += ['spirv-backend', 'target-amd']
