--- a/sycl/test-e2e/Basic/image/lit.local.cfg
+++ b/sycl/test-e2e/Basic/image/lit.local.cfg
@@ -2,4 +2,7 @@
 # the OpenCL environments support of the "Unknown" image format:
 # https://github.com/KhronosGroup/SPIRV-Headers/issues/487
 # After the issue is resolved we will re-enable Image support.
-config.unsupported_features += ['spirv-backend']
+#
+# Legacy images aren't supported on AMD and also don't compile, so mark them
+# unsupported here, bindless images should be used instead.
+config.unsupported_features += ['spirv-backend', 'target-amd']
