Fix bindless images comment formatting

--- a/sycl/test-e2e/Basic/image/lit.local.cfg
+++ b/sycl/test-e2e/Basic/image/lit.local.cfg
@@ -4,5 +4,5 @@
 # After the issue is resolved we will re-enable Image support.
 #
 # Legacy images aren't supported on AMD and also don't compile, so mark them
-# unsupported here, bindless images should be used instead.
+# unsupported here. Bindless images should be used instead.
 config.unsupported_features += ['spirv-backend', 'target-amd']
