--- a/sycl/test-e2e/Sampler/lit.local.cfg
+++ b/sycl/test-e2e/Sampler/lit.local.cfg
@@ -7,5 +7,5 @@
 # After the 1 issue is resolved and 2 is merged we will re-enable Image support.
 #
 # Legacy images aren't supported on AMD and also don't compile, so mark them
-# unsupported here, bindless images should be used instead.
+# unsupported here. Bindless images should be used instead.
 config.unsupported_features += ['spirv-backend', 'target-amd']
