--- a/sycl/test-e2e/AddressSanitizer/lit.local.cfg
+++ b/sycl/test-e2e/AddressSanitizer/lit.local.cfg
@@ -5,7 +5,7 @@ config.substitutions.append(
     ("%device_asan_cpu_aot_flag", "-Xarch_device -fsanitize=address -fsycl-targets=spir64_x86_64")
 )
 config.substitutions.append(
-    ("%device_asan_gpu_aot_flag", "-Xarch_device -fsanitize=address -fsycl-targets=spir64_gen -Xsycl-target-backend=spir64_gen %gpu_aot_target_opts")
+    ("%device_asan_gpu_aot_flag", "-Xarch_device -fsanitize=address -fsycl-targets=spir64_gen -Xsycl-target-backend=spir64_gen '-device pvc,dg2' ")
 )
 config.substitutions.append(
     ("%force_device_asan_rt", "env UR_ENABLE_LAYERS=UR_LAYER_ASAN")
