Address feedback. Replace UR USMPoolSetThresholdExp with USMPoolSetInfoExp. Implement TrimTo and new memory pool getters/setters

--- a/unified-runtime/source/loader/loader.def.in
+++ b/unified-runtime/source/loader/loader.def.in
@@ -504,7 +504,7 @@ EXPORTS
 	urPrintUsmPoolReleaseParams
 	urPrintUsmPoolRetainParams
 	urPrintUsmPoolSetDevicePoolExpParams
-	urPrintUsmPoolSetThresholdExpParams
+	urPrintUsmPoolSetInfoExpParams
 	urPrintUsmPoolTrimToExpParams
 	urPrintUsmReleaseExpParams
 	urPrintUsmSharedAllocParams
@@ -566,7 +566,7 @@ EXPORTS
 	urUSMPoolRelease
 	urUSMPoolRetain
 	urUSMPoolSetDevicePoolExp
-	urUSMPoolSetThresholdExp
+	urUSMPoolSetInfoExp
 	urUSMPoolTrimToExp
 	urUSMReleaseExp
 	urUSMSharedAlloc
