--- a/devops/actions/run-tests/benchmark/action.yml
+++ b/devops/actions/run-tests/benchmark/action.yml
@@ -47,6 +47,7 @@ runs:
           echo "#" ;;
       esac
   - name: Compute CPU core range to run benchmarks on
+    shell: bash
     run: |
       # Taken from ur-benchmark-reusable.yml:
 
@@ -89,27 +90,30 @@ runs:
       echo "-----"
       sycl-ls
       echo "-----"
-      taskset -c "$CORES" ./devops/scripts/benchmarking/benchmark.sh -n '${{ runner.name }}' -s || exit 1
-  - name: Push compute-benchmarks results
-    if: always()
-    shell: bash
-    run: |
-      # TODO -- waiting on security clearance
-      # Load configuration values
-      $(python ./devops/scripts/benchmarking/load_config.py ./devops constants)
-
-      cd "./llvm-ci-perf-results"
-      git config user.name "SYCL Benchmarking Bot"
-      git config user.email "sys_sycl_benchmarks@intel.com"
-      git pull
-      git add .
-      # Make sure changes have been made
-      if git diff --quiet && git diff --cached --quiet; then
-        echo "No new results added, skipping push."
-      else
-        git commit -m "[GHA] Upload compute-benchmarks results from https://github.com/intel/llvm/actions/runs/${{ github.run_id }}"
-        git push "https://$GITHUB_TOKEN@github.com/$SANITIZED_PERF_RES_GIT_REPO.git" "$SANITIZED_PERF_RES_GIT_BRANCH"
-      fi
+      mkdir -v ./llvm_test_workdir
+      taskset -c "$CORES" ./devops/scripts/benchmarks/main.py "$(realpath ./llvm_test_workdir)" --sycl ./toolchain --save baseline
+      echo "-----"
+      ls
+#  - name: Push compute-benchmarks results
+#    if: always()
+#    shell: bash
+#    run: |
+#      # TODO -- waiting on security clearance
+#      # Load configuration values
+#      $(python ./devops/scripts/benchmarking/load_config.py ./devops constants)
+#
+#      cd "./llvm-ci-perf-results"
+#      git config user.name "SYCL Benchmarking Bot"
+#      git config user.email "sys_sycl_benchmarks@intel.com"
+#      git pull
+#      git add .
+#      # Make sure changes have been made
+#      if git diff --quiet && git diff --cached --quiet; then
+#        echo "No new results added, skipping push."
+#      else
+#        git commit -m "[GHA] Upload compute-benchmarks results from https://github.com/intel/llvm/actions/runs/${{ github.run_id }}"
+#        git push "https://$GITHUB_TOKEN@github.com/$SANITIZED_PERF_RES_GIT_REPO.git" "$SANITIZED_PERF_RES_GIT_BRANCH"
+#      fi
   - name: Find benchmark result artifact here
     if: always()
     shell: bash
