--- a/.github/workflows/ur-precommit.yml
+++ b/.github/workflows/ur-precommit.yml
@@ -61,7 +61,7 @@ jobs:
            target_devices: level_zero:gpu;opencl:gpu;opencl:cpu
            reset_intel_gpu: true
            extra_lit_opts: --param gpu-intel-gen12=True
-           
+           image: 'ghcr.io/intel/llvm/ubuntu2404_intel_drivers:alldeps'
     
         # Extra native CPU jobs are here to force the loader to be used.
         # UR will not use the loader if there is only one target.
