--- a/.github/workflows/ur-precommit.yml
+++ b/.github/workflows/ur-precommit.yml
@@ -13,6 +13,7 @@ on:
     branches:
     - sycl
     - sycl-rel-**
+    - ur-sycl-binary
     # Do not run builds if changes are only in the following locations
     paths-ignore:
     - '.github/ISSUE_TEMPLATE/**'
