--- a/.github/workflows/ur-precommit.yml
+++ b/.github/workflows/ur-precommit.yml
@@ -38,15 +38,15 @@ concurrency:
 permissions: read-all
 
 jobs:
-  detect_changes:
-    name: Detect Changes
-    uses: ./.github/workflows/sycl-detect-changes.yml
+  # detect_changes:
+  #   name: Detect Changes
+  #   uses: ./.github/workflows/sycl-detect-changes.yml
 
-  source_checks:
-    name: Source Checks
-    needs: [detect_changes]
-    if: ${{ always() && !cancelled() && contains(needs.detect_changes.outputs.filters, 'ur') }}
-    uses: ./.github/workflows/ur-source-checks.yml
+  # source_checks:
+  #   name: Source Checks
+  #   needs: [detect_changes]
+  #   if: ${{ always() && !cancelled() && contains(needs.detect_changes.outputs.filters, 'ur') }}
+  #   uses: ./.github/workflows/ur-source-checks.yml
 
   adapters:
     name: Adapters
