--- a/.github/workflows/ur-precommit.yml
+++ b/.github/workflows/ur-precommit.yml
@@ -57,7 +57,7 @@ jobs:
        include:
          - name: L0
            adapter_name: L0
-           runner: '["Linux", "PVC_PERF"]'
+           runner: '["Linux"]'
            image_options: -u 1001 --device=/dev/dri -v /dev/dri/by-path:/dev/dri/by-path --privileged --cap-add SYS_ADMIN
            target_devices: level_zero:gpu;opencl:gpu;opencl:cpu
            reset_intel_gpu: true
