--- a/unified-runtime/source/loader/loader.def.in
+++ b/unified-runtime/source/loader/loader.def.in
@@ -99,6 +99,7 @@ EXPORTS
 	urEventGetInfo
 	urEventGetNativeHandle
 	urEventGetProfilingInfo
+	urEventHostSignal
 	urEventRelease
 	urEventRetain
 	urEventSetCallback
@@ -300,6 +301,7 @@ EXPORTS
 	urPrintEventGetInfoParams
 	urPrintEventGetNativeHandleParams
 	urPrintEventGetProfilingInfoParams
+	urPrintEventHostSignalParams
 	urPrintEventInfo
 	urPrintEventNativeProperties
 	urPrintEventReleaseParams
