--- a/unified-runtime/scripts/core/event.yml
+++ b/unified-runtime/scripts/core/event.yml
@@ -282,6 +282,22 @@ returns:
     - $X_RESULT_ERROR_UNSUPPORTED_FEATURE:
         - "If the adapter has no underlying equivalent handle."
 --- #--------------------------------------------------------------------------
+type: function
+desc: "Signals an event from host"
+class: $xEvent
+name: HostSignal
+ordinal: "0"
+analogue:
+    - "**clSetUserEventStatus**"
+params:
+    - type: $x_event_handle_t
+      name: hEvent
+      desc: "[in] handle of the event object"
+returns:
+    - $X_RESULT_ERROR_INVALID_EVENT
+    - $X_RESULT_ERROR_OUT_OF_RESOURCES
+    - $X_RESULT_ERROR_OUT_OF_HOST_MEMORY
+--- #--------------------------------------------------------------------------
 type: struct
 desc: "Properties for for $xEventCreateWithNativeHandle."
 class: $xQueue
