--- a/unified-runtime/source/loader/loader.map.in
+++ b/unified-runtime/source/loader/loader.map.in
@@ -99,6 +99,7 @@
 		urEventGetInfo;
 		urEventGetNativeHandle;
 		urEventGetProfilingInfo;
+		urEventHostSignal;
 		urEventRelease;
 		urEventRetain;
 		urEventSetCallback;
@@ -300,6 +301,7 @@
 		urPrintEventGetInfoParams;
 		urPrintEventGetNativeHandleParams;
 		urPrintEventGetProfilingInfoParams;
+		urPrintEventHostSignalParams;
 		urPrintEventInfo;
 		urPrintEventNativeProperties;
 		urPrintEventReleaseParams;
