--- a/sycl/test-e2e/Graph/Update/lit.local.cfg
+++ b/sycl/test-e2e/Graph/Update/lit.local.cfg
@@ -1,1 +1,5 @@
 config.required_features += ['aspect-ext_oneapi_graph']
+
+# https://github.com/intel/llvm/issues/17165
+if 'windows' in config.available_features:
+   config.unsupported_features += ['arch-intel_gpu_bmg_g21']
