--- a/unified-runtime/scripts/core/exp-usm-context-memcpy.yml
+++ b/unified-runtime/scripts/core/exp-usm-context-memcpy.yml
@@ -43,3 +43,6 @@ params:
 returns:
     - $X_RESULT_SUCCESS
     - $X_RESULT_ERROR_ADAPTER_SPECIFIC
+    - $X_RESULT_ERROR_INVALID_SIZE:
+        - "`size == 0`"
+        - "If `size` is higher than the allocation size of `pSrc` or `pDst`"
