--- a/.github/workflows/ur-precommit.yml
+++ b/.github/workflows/ur-precommit.yml
@@ -89,11 +89,13 @@ jobs:
 
     - uses: actions/setup-python@6ca8e8598faa206f7140a65ba31b899bebe16f58 # v5.0.0
       with:
-        python-version: 3.9
+        python-version: "3.10"
 
     - name: Install prerequisites
       working-directory: ${{github.workspace}}/unified-runtime
-      run: python3 -m pip install -r third_party/requirements.txt
+      run: |
+        python3 -m pip install -r third_party/requirements.txt
+        python3 -m pip install -r third_party/requirements_testing.txt
 
     - name: Install hwloc
       run: brew install hwloc
