[UR] Add a UR device info enum for checking native bfloat16 conversions
Signed-off-by: jinge90 <ge.jin@intel.com>

--- a/unified-runtime/scripts/core/device.yml
+++ b/unified-runtime/scripts/core/device.yml
@@ -417,6 +417,8 @@ etors:
             available for this device.
     - name: KERNEL_SET_SPECIALIZATION_CONSTANTS
       desc: "[$x_bool_t] support the $xKernelSetSpecializationConstants entry point"
+    - name: BFLOAT16_CONVERSIONS_INTEL
+      desc: "[$x_bool_t] support for native bfloat16 conversions"
     - name: MEMORY_BUS_WIDTH
       desc: "[uint32_t][optional-query] return the width in bits of the memory bus interface of the device."
     - name: MAX_WORK_GROUPS_3D
